# ipvn_predictor

./: README.md  pyproject.toml
.github/workflows/: feature_pipeline.yaml
data/ml_models/: ml_a_bogota.pkl  ml_bogota.pkl  ml_cali.pkl  ml_medellin.pkl
data/raw/: Serie_historica_ipvnbr (2).xlsx  ipvn.xlsx
data/transformed/: ft_Alrededores de Bogotá.parquet  ft_Bogotá.parquet  ft_Cali.parquet  ft_Medellín.parquet  ts_Alrededores de Bogotá.parquet  ts_Bogotá.parquet  ts_Cali.parquet  ts_Medellín.parquet
notebooks/: 01_load_and_validate_raw_data.ipynb  02_trasnform_raw_data_into_ts_data.ipynb  03_transform_ts_data_to_feaures_and_target.ipynb  04_lightgbm_ml.ipynb  05_backfill_feature_store.ipynb  06_feature_pipline.ipynb  07_ml_model_pipeline.ipynb  test.ipynb
src/: app.py  config.py  data.py  inference.py  paths.py  plot.py
