[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Javier <7.matute@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "^1.0.0"
requests = "^2.32.3"
pandas = ">=2.0.0,<2.2.0"
xlrd = "^2.0.1"
openpyxl = "3.1.3"
fastparquet = "^2024.5.0"
tqdm = "^4.66.4"
lightgbm = "^4.4.0"
scikit-learn = "^1.5.1"
python-dotenv = "^1.0.1"
hsfs = "^3.7.0"
hopsworks = "^3.7.0"
streamlit = "^1.36.0"
plotly-express = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
